added lot of stuff

--- a/Auth/src/main/resources/application.properties
+++ b/Auth/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=Auth
 #DB Config
 spring.datasource.url = ${DATABASE_URL}
 spring.datasource.driverClassName = ${DATABASE_DRIVER_CLASS}
-spring.h2.console.enabled = true
+spring.jpa.hibernate.ddl-auto=update
+
 
 # Mail Configuration
 spring.mail.host=${MAILTRAP_HOST}
